@@ -18,4 +18,4 @@ See http://stackoverflow.com/questions/12980915/exception-when-trying-to-read-nu
 
 The logs are stored in a file in the application isolated storage. To retrieve it, you need to install this tool on your computer : http://wptools.codeplex.com/
 
-If the application crashes during a call, you may loose the sound in linphone for a while. A device rebbot fix this issue.
+If the application crashes during a call, you may loose the sound in linphone for a while. A device reboot fix this issue.
